# prnu-device-id

./: .gitignore  LICENSE  README.md  conftest.py  demo.py  environment.yml  pyproject.toml  walkthrough.md
.github/workflows/: ci.yml
data/: splits.json  splits_demo.json
data/processed/: .gitkeep
data/raw/: .gitkeep
data/scripts/: __init__.py  build_demo_splits.py  build_splits.py  download_dresden.py  download_raise.py  download_vision.py  precompute_residuals.py  train_cnn.py  train_ncc.py  train_siamese.py
docs/: architecture.md
journal/: sprint_1.md  sprint_template.md
notebooks/: .gitkeep  00_project_setup.ipynb  01_data_exploration.ipynb  02_prnu_extraction.ipynb  03_model_training.ipynb  04_evaluation_results.ipynb
src/: __init__.py  prnu_pipeline.py
src/algorithms/: __init__.py  cnn_classifier.py  ncc_baseline.py  siamese_network.py
src/utils/: __init__.py  data_loader.py  evaluation_metrics.py  helpers.py
tests/: test_compress.py  test_denoise.py  test_fingerprint.py  test_metrics.py  test_patches.py
