[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prnu-device-id"
version = "0.1.0"
description = "PRNU Device-Level Camera Identification Under Social Media Compression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Geeshitha Mamidi", email = "geeshitha.mamidi@sjsu.edu"},
    {name = "Vikaramaditya Baddam", email = "srisaivikramadithyareddy.baddam@sjsu.edu"},
    {name = "Shashank Varidelly", email = "shashank.varidelly@sjsu.edu"},
    {name = "Rishikesh Aluguvelli", email = "rishikeshreddy.aluguvelli@sjsu.edu"},
]

dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.12",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "PyWavelets>=1.5",
    "Pillow>=10.2",
    "tqdm>=4.66",
    "pandas>=2.2",
    "mlflow>=2.11",
    "torchmetrics>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "flake8>=7.0",
    "black>=24.2",
    "isort>=5.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
include = ["src*"]
